# Quantum-Migration-Toolkit

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  audit_report.txt  research_paper.md
cli/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  SimpleJson.hpp  rules.json
engine/ai/: AiRemediator.hpp  PqcContext.hpp
engine/patch/: AutoRemediator.hpp  DependencyInjector.hpp  OutputFormatter.hpp
engine/pqc/: AES.hpp  FileEncryptor.cpp  FileEncryptor.hpp  QuantumKyber.cpp  QuantumKyber.hpp
engine/scan/: AstEngine.hpp  BaselineManager.hpp  CommentStripper.hpp  EntropyDetector.hpp  IgnoreHandler.hpp  ProximityAnalyzer.hpp  RegexEngine.hpp  RuleEngine.hpp  ScanTypes.hpp  ThreadPool.hpp
experiments/: run_all_repos.ps1  summarize_results.ps1
experiments/results/: EXPERIMENT_SUMMARY.csv  EXPERIMENT_SUMMARY.txt
experiments/results/clean_modern_repo/: GROUND_TRUTH.txt  audit_report_rich.txt  run_ai_stdout_stderr.txt  run_ai_timing.txt  run_rich_stdout_stderr.txt  run_rich_timing.txt  run_sarif_stdout_stderr.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
experiments/results/config_secrets_repo/: GROUND_TRUTH.txt  run_ai_timing.txt  run_rich_timing.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
experiments/results/cpp_legacy_service/: GROUND_TRUTH.txt  audit_report_rich.txt  run_ai_stdout_stderr.txt  run_ai_timing.txt  run_rich_stdout_stderr.txt  run_rich_timing.txt  run_sarif_stdout_stderr.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
experiments/results/dotnet_crypto_app/: GROUND_TRUTH.txt  audit_report.txt  run_ai_stdout_stderr.txt  run_ai_timing.txt  run_rich_stdout_stderr.txt  run_rich_timing.txt  run_sarif_stdout_stderr.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
experiments/results/go_service/: GROUND_TRUTH.txt  audit_report_rich.txt  run_ai_stdout_stderr.txt  run_ai_timing.txt  run_rich_stdout_stderr.txt  run_rich_timing.txt  run_sarif_stdout_stderr.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
experiments/results/java_maven_app/: GROUND_TRUTH.txt  audit_report_rich.txt  run_ai_stdout_stderr.txt  run_ai_timing.txt  run_rich_stdout_stderr.txt  run_rich_timing.txt  run_sarif_stdout_stderr.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
experiments/results/legacy_crypto_lib/: GROUND_TRUTH.txt  audit_report.txt  audit_report_rich.txt  run_ai_stdout_stderr.txt  run_ai_timing.txt  run_rich_stdout_stderr.txt  run_rich_timing.txt  run_sarif_stdout_stderr.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
experiments/results/mixed_monorepo/: GROUND_TRUTH.txt  audit_report.txt  audit_report_rich.txt  run_ai_stdout_stderr.txt  run_ai_timing.txt  run_rich_stdout_stderr.txt  run_rich_timing.txt  run_sarif_stdout_stderr.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
experiments/results/node_ts_api/: GROUND_TRUTH.txt  audit_report.txt  run_ai_stdout_stderr.txt  run_ai_timing.txt  run_rich_stdout_stderr.txt  run_rich_timing.txt  run_sarif_stdout_stderr.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
experiments/results/python_flask_api/: GROUND_TRUTH.txt  audit_report.txt  audit_report_rich.txt  run_ai_stdout_stderr.txt  run_ai_timing.txt  run_rich_stdout_stderr.txt  run_rich_timing.txt  run_sarif_stdout_stderr.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
experiments/results/rust_service/: GROUND_TRUTH.txt  audit_report.txt  run_ai_stdout_stderr.txt  run_ai_timing.txt  run_rich_stdout_stderr.txt  run_rich_timing.txt  run_sarif_stdout_stderr.txt  run_sarif_timing.txt  run_text_stdout_stderr.txt  run_text_timing.txt
models/: DOWNLOAD_MODEL.txt
